--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,38 +80,58 @@ jobs:
         shell: pwsh
         run: |
           $llvmVersion = "${{ matrix.llvm }}"
+          $llvmTag = "llvmorg-${llvmVersion}.0"  # default
           $srcDir = "C:\llvm-src"
           $buildDir = "C:\llvm-build"
           $installDir = "C:\LLVM"
 
-          Write-Host "⬇️ Cloning LLVM $llvmVersion source..."
-          git clone --depth 1 --branch "llvmorg-$llvmVersion.0" https://github.com/llvm/llvm-project.git $srcDir
+          # Try known release first, fallback to .7 if exists
+          Write-Host "⬇️ Cloning LLVM source..."
+          git clone https://github.com/llvm/llvm-project.git $srcDir --depth 1
+          Push-Location $srcDir
+          $tagFound = git tag --list "llvmorg-$llvmVersion*" | Sort-Object | Select-Object -Last 1
+          if ($tagFound) {
+            Write-Host "✅ Found LLVM tag: $tagFound"
+            git fetch origin tag $tagFound --depth 1
+            git checkout $tagFound
+          } else {
+            Write-Host "⚠️ No matching tag for $llvmVersion found — building main branch."
+          }
+          Pop-Location
 
-          Write-Host "🛠️ Configuring LLVM build with CMake..."
-          cmake -S "$srcDir\llvm" -B $buildDir `
-            -G "Ninja" `
-            -DCMAKE_BUILD_TYPE=Release `
-            -DCMAKE_INSTALL_PREFIX=$installDir `
-            -DLLVM_ENABLE_PROJECTS="clang" `
-            -DLLVM_TARGETS_TO_BUILD="X86;AArch64" `
-            -DLLVM_BUILD_TOOLS=ON `
-            -DLLVM_INCLUDE_TESTS=OFF `
-            -DLLVM_INCLUDE_EXAMPLES=OFF `
-            -DLLVM_INCLUDE_DOCS=OFF `
-            -DLLVM_INCLUDE_BENCHMARKS=OFF
+          if (!(Test-Path "$installDir\bin\llvm-config.exe")) {
+            Write-Host "🛠️ Configuring LLVM build with CMake..."
+            cmake -S "$srcDir\llvm" -B $buildDir `
+              -G "Ninja" `
+              -DCMAKE_BUILD_TYPE=Release `
+              -DCMAKE_INSTALL_PREFIX=$installDir `
+              -DLLVM_ENABLE_PROJECTS="clang" `
+              -DLLVM_TARGETS_TO_BUILD="X86;AArch64" `
+              -DLLVM_BUILD_TOOLS=ON `
+              -DLLVM_INCLUDE_TESTS=OFF `
+              -DLLVM_INCLUDE_EXAMPLES=OFF `
+              -DLLVM_INCLUDE_DOCS=OFF `
+              -DLLVM_INCLUDE_BENCHMARKS=OFF
 
-          Write-Host "⚙️ Building LLVM (this may take a few minutes)..."
-          cmake --build $buildDir --target install --config Release
-
-          Write-Host "✅ LLVM installed to $installDir"
+            Write-Host "⚙️ Building LLVM (this may take 10–20 minutes)..."
+            cmake --build $buildDir --target install --config Release
+          } else {
+            Write-Host "✅ Using cached LLVM build."
+          }
 
           $llvmBin = "$installDir\bin"
           "LLVM_SYS_${{ matrix.llvm }}_PREFIX=$installDir" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           "LLVM_CONFIG_PATH=$llvmBin\llvm-config.exe" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
-          Write-Host "🔍 Checking llvm-config..."
-          & "$llvmBin\llvm-config.exe" --version
+          if (Test-Path "$llvmBin\llvm-config.exe") {
+            Write-Host "🔍 LLVM version check:"
+            & "$llvmBin\llvm-config.exe" --version
+          } else {
+            Write-Host "⚠️ llvm-config.exe still not found. Printing $llvmBin contents:"
+            Get-ChildItem $llvmBin
+          }
+
 
 
       - name: 💾 Cache LLVM build
