--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,27 +16,18 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             llvm: 15
-            label: linux-x86_64
 
           # ✅ macOS Intel
           - os: macos-13
             target: x86_64-apple-darwin
             llvm: 15
             arch: intel
-            label: macos-x86_64
 
           # ✅ macOS ARM
           - os: macos-14
             target: aarch64-apple-darwin
             llvm: 15
             arch: arm
-            label: macos-arm64
-
-          # ✅ FreeBSD (cross)
-          - os: ubuntu-latest
-            target: x86_64-unknown-freebsd
-            llvm: 15
-            label: freebsd-x86_64
 
     runs-on: ${{ matrix.os }}
 
@@ -49,6 +40,7 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      # === Cache cargo ===
       - name: ⚡ Cache cargo
         uses: actions/cache@v4
         with:
@@ -58,18 +50,16 @@ jobs:
             target
           key: ${{ runner.os }}-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
 
-      # === LLVM Setup ===
-      - name: 🧩 Install LLVM (Linux & FreeBSD)
+      # === Linux LLVM ===
+      - name: 🧩 Install LLVM on Linux
         if: runner.os == 'Linux'
         run: |
           sudo apt update
-          sudo apt install -y \
-            llvm-${{ matrix.llvm }} llvm-${{ matrix.llvm }}-dev clang-${{ matrix.llvm }} \
-            libpolly-${{ matrix.llvm }}-dev cmake pkg-config \
-            libffi-dev libxml2-dev libzstd-dev zlib1g-dev libtinfo-dev
+          sudo apt install -y llvm-${{ matrix.llvm }} llvm-${{ matrix.llvm }}-dev clang-${{ matrix.llvm }}
           echo "LLVM_SYS_${{ matrix.llvm }}_PREFIX=/usr/lib/llvm-${{ matrix.llvm }}" >> $GITHUB_ENV
           echo "✅ Installed LLVM ${{ matrix.llvm }} on Linux"
 
+      # === macOS Intel LLVM ===
       - name: 🍎 Install LLVM on macOS (Intel)
         if: runner.os == 'macOS' && matrix.arch == 'intel'
         run: |
@@ -77,7 +67,9 @@ jobs:
           LLVM_DIR="/usr/local/opt/llvm@${{ matrix.llvm }}"
           echo "LLVM_SYS_${{ matrix.llvm }}_PREFIX=$LLVM_DIR" >> $GITHUB_ENV
           echo "$LLVM_DIR/bin" >> $GITHUB_PATH
+          echo "✅ Configured LLVM for Intel macOS at $LLVM_DIR"
 
+      # === macOS ARM LLVM ===
       - name: 🍏 Install LLVM on macOS (ARM)
         if: runner.os == 'macOS' && matrix.arch == 'arm'
         run: |
@@ -85,14 +77,7 @@ jobs:
           LLVM_DIR="/opt/homebrew/opt/llvm@${{ matrix.llvm }}"
           echo "LLVM_SYS_${{ matrix.llvm }}_PREFIX=$LLVM_DIR" >> $GITHUB_ENV
           echo "$LLVM_DIR/bin" >> $GITHUB_PATH
-
-      # === FreeBSD Cross-Compile Setup ===
-      - name: 🧱 Setup FreeBSD cross toolchain
-        if: matrix.target == 'x86_64-unknown-freebsd'
-        run: |
-          sudo apt install -y qemu-user-static libc6-dev-amd64-cross binutils
-          rustup target add x86_64-unknown-freebsd
-          echo "✅ FreeBSD target toolchain installed"
+          echo "✅ Configured LLVM for Apple Silicon at $LLVM_DIR"
 
       # === Build ===
       - name: ⚙️ Build release binary
@@ -106,20 +91,49 @@ jobs:
           cd target/${{ matrix.target }}/release
           cp wpp-cli ../../../dist/
           cd ../../../dist
-          FILENAME="W++-LLVM-${{ github.ref_name }}-${{ matrix.label }}"
-          tar -czf "${FILENAME}.tar.gz" wpp-cli
-          shasum -a 256 "${FILENAME}.tar.gz" > "${FILENAME}.sha256"
-          echo "✅ Packaged ${FILENAME}.tar.gz"
+          tar -czf wpp-cli-${{ matrix.target }}.tar.gz wpp-cli
+          shasum -a 256 wpp-cli-${{ matrix.target }}.tar.gz > wpp-cli-${{ matrix.target }}.sha256
 
+      # === Upload artifact ===
       - name: 🆙 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wpp-cli-${{ matrix.label }}
+          name: wpp-cli-${{ matrix.target }}
+          path: dist/*
+
+  # === FreeBSD build (real VM) ===
+  freebsd:
+    name: 🐚 Build FreeBSD binary
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 🧱 Checkout repository
+        uses: actions/checkout@v4
+
+      - name: 🧩 Build inside FreeBSD VM
+        uses: vmactions/freebsd-vm@v1
+        with:
+          release: "14.1"
+          usesh: true
+          run: |
+            pkg install -y rust llvm15 cmake pkgconf
+            export LLVM_SYS_150_PREFIX=/usr/local/llvm15
+            cargo build --release -p wpp-cli
+            mkdir -p dist
+            cp target/release/wpp-cli dist/
+            cd dist
+            tar -czf wpp-cli-x86_64-unknown-freebsd.tar.gz wpp-cli
+            sha256 wpp-cli-x86_64-unknown-freebsd.tar.gz > wpp-cli-x86_64-unknown-freebsd.sha256
+
+      - name: 🆙 Upload FreeBSD artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: wpp-cli-x86_64-unknown-freebsd
           path: dist/*
 
   release:
     name: ✨ Create GitHub Release
-    needs: build
+    needs: [build, freebsd]
     runs-on: ubuntu-latest
 
     steps:
