--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-windows:
-    name: Build Windows binary
+    name: Build W++ for Windows
     runs-on: windows-latest
 
     steps:
@@ -21,6 +21,7 @@ jobs:
         shell: pwsh
         run: |
           choco install cmake ninja git python3 visualstudio2022buildtools -y
+          Write-Host "✅ Installed CMake, Ninja, Git, Python, and VS Build Tools"
 
       - name: 🧩 Build LLVM from source
         shell: pwsh
@@ -29,15 +30,15 @@ jobs:
           $buildDir = "C:\llvm-build"
           $installDir = "C:\LLVM"
 
-          Write-Host "⬇️ Cloning LLVM..."
+          Write-Host "⬇️ Cloning LLVM 15.0.7 source..."
           git clone https://github.com/llvm/llvm-project.git $srcDir --depth 1 --branch llvmorg-15.0.7
 
-          Write-Host "🛠️ Configuring build..."
+          Write-Host "🛠️ Configuring LLVM with CMake..."
           cmake -S "$srcDir\llvm" -B $buildDir `
             -G "Ninja" `
             -DCMAKE_BUILD_TYPE=Release `
             -DCMAKE_INSTALL_PREFIX=$installDir `
-            -DLLVM_ENABLE_PROJECTS="clang" `
+            -DLLVM_ENABLE_PROJECTS="clang;lld" `
             -DLLVM_TARGETS_TO_BUILD="X86;AArch64" `
             -DLLVM_BUILD_TOOLS=ON `
             -DLLVM_INCLUDE_TESTS=OFF `
@@ -45,17 +46,35 @@ jobs:
             -DLLVM_INCLUDE_EXAMPLES=OFF `
             -DLLVM_ENABLE_TERMINFO=OFF `
             -DLLVM_ENABLE_LIBXML2=OFF `
-            -DLLVM_ENABLE_ZLIB=ON
+            -DLLVM_ENABLE_ZLIB=ON `
+            -DLLVM_INSTALL_TOOLCHAIN_ONLY=OFF
 
-          Write-Host "⚙️ Building LLVM..."
+          Write-Host "⚙️ Building LLVM (this may take a while)..."
           cmake --build $buildDir --target install --config Release
 
           Write-Host "✅ LLVM installed to $installDir"
-          & "$installDir\bin\llvm-config.exe" --version
 
-          echo "LLVM_SYS_150_PREFIX=$installDir" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-          echo "LLVM_CONFIG_PATH=$installDir\bin\llvm-config.exe" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-          echo "$installDir\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
+          # === llvm-config sanity check ===
+          $llvmConfig = "$installDir\bin\llvm-config.exe"
+          if (!(Test-Path $llvmConfig)) {
+            Write-Host "⚠️ llvm-config.exe not found in expected path. Searching..."
+            $found = Get-ChildItem -Recurse -Path $installDir -Filter "llvm-config.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
+            if ($found) {
+              Write-Host "✅ Found llvm-config.exe at: $($found.FullName)"
+              $llvmConfig = $found.FullName
+            } else {
+              Write-Host "❌ llvm-config.exe missing entirely. Build may fail."
+            }
+          }
+
+          if (Test-Path $llvmConfig) {
+            Write-Host "🔍 llvm-config version check:"
+            & $llvmConfig --version
+          }
+
+          "LLVM_SYS_150_PREFIX=$installDir" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+          "LLVM_CONFIG_PATH=$llvmConfig" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+          "$installDir\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: ⚙️ Build W++ for Windows
         run: cargo build --release -p wpp-cli --target x86_64-pc-windows-msvc
